# quantumlock

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  TESTING.md  demo.py  pyproject.toml  requirements.txt
backend/: __init__.py
backend/api/: main.py
backend/api/v1/endpoints/: analyzer.py  generator.py  totp.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  breach_checker.py  passphrase_generator.py  password_generator.py  strength_analyzer.py
backend/features/: __init__.py  totp_generator.py
